test: add tests for embedded members
Add a small test that embeds CList links into a surrounding structure
and uses the *_entry() accessors.

Signed-off-by: David Herrmann <dh.herrmann@gmail.com>

--- a/src/meson.build
+++ b/src/meson.build
@@ -25,3 +25,6 @@ test('API Symbol Visibility', test_api)
 
 test_basic = executable('test-basic', ['test-basic.c'], dependencies: libclist_dep)
 test('Basic API Behavior', test_basic)
+
+test_embed = executable('test-embed', ['test-embed.c'], dependencies: libclist_dep)
+test('Embedded List Nodes', test_embed)
