--- a/meson.build
+++ b/meson.build
@@ -1,8 +1,12 @@
-project('c-list',
+project(
+        'c-list',
         'c',
         version: '1',
         license: 'Apache',
-        default_options: [ 'c_std=c11' ])
+        default_options: [
+                'c_std=c11'
+        ],
+)
 
 add_project_arguments('-D_GNU_SOURCE', language: 'c')
 mod_pkgconfig = import('pkgconfig')
