build: update build system
Minor updates to the build-system and CI.

Signed-off-by: David Herrmann <dh.herrmann@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: c
 services:
   - docker
 
-install:
+before_install:
   - curl -O -L "https://raw.githubusercontent.com/cherry-pick/cherry-images/v1/scripts/vmrun"
   - curl -O -L "https://raw.githubusercontent.com/cherry-pick/cherry-ci/v1/scripts/cherryci"
   - chmod +x "./vmrun" "./cherryci"
