ci: run on windows-2016
Add another CI run on windows-2016, to verify VS-2017 behavior.

Signed-off-by: David Rheinsberg <david.rheinsberg@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,10 @@ jobs:
 
   ci-msvc:
     name: CI with MSVC
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-2016, windows-latest]
 
     steps:
     - name: Fetch Sources
