--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,23 +9,19 @@ on:
 jobs:
   ci:
     name: CI with Default Configuration
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Fetch Sources
-      uses: actions/checkout@v2
-    - name: Run through C-Util CI
-      uses: c-util/automation/src/ci-c-util@v1
-      with:
-        m32: 1
-        valgrind: 1
+    uses: bus1/cabuild/.github/workflows/ci-c-util.yml@v1
+    with:
+      cabuild_ref: "v1"
+      m32: true
+      matrixmode: true
+      valgrind: true
 
   ci-msvc:
     name: CI with MSVC
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-2016, windows-latest]
+        os: [windows-2019, windows-latest]
 
     steps:
     - name: Fetch Sources
